# hedron

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Tuprules.tup  default.nix  mkdocs.yml  shell.nix
.gitlab/issue_templates/: bug_report.md  feature_request.md
configs/: clang.config  default.config  gcc-werror.config
doc/: flexible-heap.md  implementation.md  kernel-interface.md  upcoming-interrupt-subsystem.md  upcoming.md
docs/: implementation.md  index.md  kernel-interface.md  proposals.md  upcoming.md
docs/user-documentation/: data-structures.md  index.md  syscall-binary-interface.md  syscall-reference.md
include/: acpi.hpp  acpi_dmar.hpp  acpi_facs.hpp  acpi_fadt.hpp  acpi_gas.hpp  acpi_hpet.hpp  acpi_madt.hpp  acpi_mcfg.hpp  acpi_rsdp.hpp  acpi_rsdt.hpp  acpi_table.hpp  algorithm.hpp  alloc_result.hpp  api.hpp  arch.hpp  assert.hpp  atomic.hpp  avl.hpp  barrier.hpp  bitmap.hpp  bits.hpp  bootstrap.hpp  buddy.hpp  capability.hpp  cmdline.hpp  compiler.hpp  config.hpp  console.hpp  console_serial.hpp  console_vga.hpp  counter.hpp  cpu.hpp  cpuinfo.hpp  cpulocal.hpp  cpuset.hpp  crd.hpp  delegate_result.hpp  descriptor.hpp  dmar.hpp  dpt.hpp  (+94 more)
nix/: build.nix  clang-tidy.nix  cmake-modules.nix  coverage.nix  cyberus-overlay.nix  docs.nix  integration-test.nix  nixpkgs.nix  nur-packages.nix  overlay.nix  qemu-boot.nix  release.nix  sources.json  stylecheck.nix
src/: CMakeLists.txt  Tupfile  acpi.cpp  acpi_dmar.cpp  acpi_fadt.cpp  acpi_hpet.cpp  acpi_madt.cpp  acpi_mcfg.cpp  acpi_rsdp.cpp  acpi_rsdt.cpp  acpi_table.cpp  avl.cpp  bootstrap.cpp  buddy.cpp  cmdline.cpp  console.cpp  console_serial.cpp  console_vga.cpp  counter.cpp  cpu.cpp  cpulocal.cpp  dmar.cpp  dpt.cpp  dpt_new.cpp  ec.cpp  ec_exc.cpp  ec_svm.cpp  ec_vmx.cpp  entry.S  ept.cpp  ept_new.cpp  fpu.cpp  gdt.cpp  gsi.cpp  hip.cpp  hpet.cpp  hpt.cpp  hpt_new.cpp  hypervisor.ld  idt.cpp  (+40 more)
test/integration/: qemu-boot
test/unit/: CMakeLists.txt  Tupfile  Tuprules.tup  acpi_fadt.cpp  acpi_fadt_test_helpers.hpp  algorithm.cpp  atomic.cpp  bitmap.cpp  construct_counter.hpp  list.cpp  main.cpp  math.cpp  mtrr.cpp  optional.cpp  page_table.cpp  result.cpp  scope_guard.cpp  spinlock.cpp  static_vector.cpp  string.cpp  time.cpp  unique_ptr.cpp  vmx_msr_bitmap.cpp  vmx_preemption_timer.cpp
tools/: check-elf-segments  gen_usb.sh  grub.cfg.tmpl
